; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_cmac_prov.c_cmac_init.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_cmac_prov.c_cmac_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmac_data_st = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @cmac_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmac_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cmac_data_st*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.cmac_data_st*
  store %struct.cmac_data_st* %6, %struct.cmac_data_st** %3, align 8
  %7 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %8 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %11 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %10, i32 0, i32 0
  %12 = call i32 @ossl_prov_cipher_cipher(i32* %11)
  %13 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %14 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %13, i32 0, i32 0
  %15 = call i32 @ossl_prov_cipher_engine(i32* %14)
  %16 = call i32 @CMAC_Init(i32 %9, i32* null, i32 0, i32 %12, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %18 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %17, i32 0, i32 0
  %19 = call i32 @ossl_prov_cipher_reset(i32* %18)
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @CMAC_Init(i32, i32*, i32, i32, i32) #1

declare dso_local i32 @ossl_prov_cipher_cipher(i32*) #1

declare dso_local i32 @ossl_prov_cipher_engine(i32*) #1

declare dso_local i32 @ossl_prov_cipher_reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
